Created secondary & sub headers

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <h1 class="header--main">Discover hidden places in the world around you</h1>
     <p><a class="link--cta" href="#">Discover Excursion (Coming Soon!)</a>a></p>
 
+    <h2 class="header--secondary">Your personal travel guide</h2>
+    <h4 class="header--subheader">Excursion remembers places you like,and reccomends new points of interest around you.</h4>
+
 
     </body>
 </html>
