--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
     <h2 class="header--secondary">Your personal travel guide</h2>
     <h4 class="header--subheader">Excursion remembers places you like,and reccomends new points of interest around you.</h4>
-
-
+    <p><img src="/images/camp.webp"></p>
+    <p><img src="/images/phone.webp"></p>
+    <h4 class="header--subheader">Coming soon for iPhone and Android</h4>
+    <p><a class="link--cta" href="#">Discover Excursion (Coming Soon!)</a>a></p>
     </body>
 </html>
