--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <p><img src="/images/camp.webp"></p>
     <p><img src="/images/phone.webp"></p>
     <h4 class="header--subheader">Coming soon for iPhone and Android</h4>
-    <p><a class="link--cta" href="#">Discover Excursion (Coming Soon!)</a>a></p>
+    <p><a class="link--cta" href="#">Discover Excursion (Coming Soon!)</a></p>
+    <p class="footer--copyright">©Excursion</p>
     </body>
 </html>
